<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#22252d"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/solutionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:fontFamily="sans-serif"
        android:textColor="#BCBCBC"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/resultTV"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/resultTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:background="@drawable/click_bg"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:columnCount="4"
            android:rowCount="5"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/ac"
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:backgroundTint="#282b33"
                android:text="@string/ac"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/pow"
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:backgroundTint="#282b33"
                android:text="@string/aaa"
                android:textColor="@color/white"
                android:textSize="25sp" />


            <Button
                android:id="@+id/percent"
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:backgroundTint="#282b33"
                android:text="@string/bbb"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/divide"
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:layout_row="0"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:backgroundTint="#282b33"
                android:text="@string/ccc"
                android:textColor="@color/red"
                android:textSize="25sp" />

            <Button
                android:id="@+id/seven"
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:backgroundTint="#282b33"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/eight"
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:backgroundTint="#282b33"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:textSize="25sp" />


            <Button
                android:id="@+id/nine"
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:backgroundTint="#282b33"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/multiply"
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:layout_row="1"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:backgroundTint="#282b33"
                android:text="@string/xxx"
                android:textColor="@color/red"
                android:textSize="25sp" />

            <Button
                android:id="@+id/four"
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:backgroundTint="#282b33"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/five"
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:backgroundTint="#282b33"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:textSize="25sp" />


            <Button
                android:id="@+id/six"
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:layout_row="2"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:backgroundTint="#282b33"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/substriction"
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:layout_row="2"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:backgroundTint="#282b33"
                android:text="@string/zzz"
                android:textColor="@color/red"
                android:textSize="25sp" />

            <Button
                android:id="@+id/one"
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:backgroundTint="#282b33"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/two"
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:backgroundTint="#282b33"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:textSize="25sp" />


            <Button
                android:id="@+id/three"
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:layout_row="3"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:backgroundTint="#282b33"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/sum"
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:layout_row="3"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:backgroundTint="#282b33"
                android:text="@string/ass"
                android:textColor="@color/red"
                android:textSize="25sp" />

            <Button
                android:id="@+id/clear"
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:backgroundTint="@color/red"
                android:text="@string/c"
                android:textSize="20sp" />

            <Button
                android:id="@+id/zero"
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:layout_row="4"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:backgroundTint="#282b33"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/common"
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:layout_row="4"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:backgroundTint="#282b33"
                android:text="@string/cc"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/equal"
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:layout_row="4"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:backgroundTint="@color/teal_700"
                android:text="@string/equal"
                android:textColor="@color/white"
                android:textSize="25sp" />


        </GridLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>